--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.kyrylokuzyk.arfoundationremote": "file:../Assets/Plugins/ARFoundationRemoteInstaller/com.kyrylokuzyk.arfoundationremote.tgz",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
@@ -10,8 +11,9 @@
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.arcore": "4.1.7",
-    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.arfoundation": "4.1.9",
     "com.unity.xr.arkit": "4.1.7",
+    "com.unity.xr.arkit-face-tracking": "4.1.9",
     "com.unity.xr.magicleap": "6.2.2",
     "com.unity.xr.management": "4.0.7",
     "com.unity.xr.windowsmr": "4.6.0",
